samples/_failures_safe/1761364581_e378f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3539ec10.c: In function ‘main’:
./samples/SAFE/__tmp_3539ec10.c:157:12: error: missing terminating " character
  157 |     printf("Commands: 0=START,
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3539ec10.c:157:5: error: expected expression at end of input
  157 |     printf("Commands: 0=START,
      |     ^~~~~~
./samples/SAFE/__tmp_3539ec10.c:157:5: error: expected declaration or statement at end of input
